@@ -1,3 +1,7 @@
+Drupal 8.3.7, 2017-08-16
+------------------------
+- Fixed security issues. See SA-CORE-2017-004.
+
 Drupal 8.3.4, 2017-06-21
 ------------------------
 - Fixed security issues. See SA-CORE-2017-003.
